# Quant-Modelling-Task

./: data_exploration.ipynb  main.py  modeling_demand.ipynb  pyproject.toml  submission.csv  utils.py
