[project]
name = "quant-modelling-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
